2005-01-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Services/ParserService/DefaultParserService.cs:
	* Services/ParserService/CodeCompletionDatabase.cs:
	* Commands/ProjectBrowserCommands/CombineNodeCommands.cs:
	* Gui/Pads/TerminalPad.cs:
	* Gui/BrowserDisplayBinding/HtmlViewPane.cs:
	* Internal/Codons/LanguageBinding/ILanguageBinding.cs:
	* Internal/Project/PrjxFileFormat.cs:
	* Internal/Project/CmbxFileFormat.cs:
	* Internal/Project/IFileFormat.cs:
	* Internal/Project/Project/DotNetProject.cs:
	* Internal/Project/Project/Project.cs:
	* Internal/Project/Combine/Combine.cs:
	* Internal/Project/Combine/CombineEntry.cs:
	* Internal/Templates/ProjectTemplates/CombineDescriptor.cs:
	* Internal/Templates/ProjectTemplates/ProjectDescriptor.cs:
	* Commands/MenuItemBuilders.cs: Use the new progress monitor API.
	
	* Internal/ProcessMonitoring/*: New progress monitoring classes.
	
	* Commands/RunCommands.cs: Factorized a lot of common code into
	ProjectService.cs.
	
	* Services/DispatchService/DispatchService.cs: Added new ThreadDispatch
	method, which dispatches the call in a new thread (and does not queue the
	call, like BackgroundDispatch).
	
	* Services/ProcessService/ProcessService.cs: StartProcess now returns
	a reference to the started process. Added a StartProcess methods that
	writes the output in a text writer.
	Added StartConsoleProcess method which runs a process in an xterm.
	
	* Services/ProcessService/ProcessWrapper.cs: Added WaitForOutput method
	which blocks until all process output has been read.
	
	* Services/Project/DefaultProjectService.cs: Use the new progress
	monitor API. Factorized here some methods from RunCommands.cs.
	
	* IProjectService.cs: Added new methods for building and running projects.
	Removed some event methods that are now handled internally.
	
	* Services/StatusBar/IStatusBarService.cs:
	* Services/StatusBar/DefaultStatusBarService.cs: Simplified. All progress